Attempting CRUD operations with Azure

--- a/AzureLab_GirlsandBoys/appsettings.json
+++ b/AzureLab_GirlsandBoys/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureLab_GirlsandBoysContext": "Server=(localdb)\\mssqllocaldb;Database=AzureLab_GirlsandBoysContext-de9fbe2b-c074-45e5-8f5e-99bc2fbc5e76;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
