Refactored the project to wipe the DI from previous labs, now using entity migration and scaffolding

--- a/AzureLab_GirlsandBoys/appsettings.json
+++ b/AzureLab_GirlsandBoys/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureLab_GirlsandBoysContext": "Server=(localdb)\\mssqllocaldb;Database=AzureLab_GirlsandBoysContext-de9fbe2b-c074-45e5-8f5e-99bc2fbc5e76;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "AzureLab_GirlsandBoysContext": "Data Source=PRODUCTIVITY1;Initial Catalog=AzureBoysGirlsDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
