Init Commit after finishing lab 10 and hostingthe app locally

--- a/AzureLab_GirlsandBoys/appsettings.json
+++ b/AzureLab_GirlsandBoys/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AzureLab_GirlsandBoysContext": "Data Source=JORDANLAPTOP420;Initial Catalog=AzureStudentTeacherDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  }
 }
