--- a/AzureLab_GirlsandBoys/AzureLab_GirlsandBoys.csproj
+++ b/AzureLab_GirlsandBoys/AzureLab_GirlsandBoys.csproj
@@ -1,20 +1,29 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20211105222656_InitialMC.cs" />
+    <Compile Remove="Migrations\20211105222656_InitialMC.Designer.cs" />
+    <Compile Remove="Migrations\20211105222912_InitialMC.cs" />
+    <Compile Remove="Migrations\20211105222912_InitialMC.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.20" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Boys\Data\" />
-    <Folder Include="Areas\Boys\Models\" />
-    <Folder Include="Areas\Girls\Data\" />
-    <Folder Include="Areas\Girls\Models\" />
-    <Folder Include="Areas\Teachers\Data\" />
-    <Folder Include="Areas\Teachers\Models\" />
+    <Folder Include="Areas\Student\Models\" />
+    <Folder Include="Areas\Teacher\Models\" />
   </ItemGroup>
 
 </Project>
