Added authorization prior to accessing areas

--- a/AzureLab_GirlsandBoys/appsettings.json
+++ b/AzureLab_GirlsandBoys/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AzureLab_GirlsandBoysContext": "Data Source=JORDANLAPTOP420;Initial Catalog=AzureStudentTeacherDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "AuthContextConnection": "Data Source=JORDANLAPTOP420;Initial Catalog=AzureStudentTeacherDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "AzureLab_GirlsandBoysContext": "Data Source=JORDANLAPTOP420;Initial Catalog=AzureGBT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AuthContextConnection": "Data Source=JORDANLAPTOP420;Initial Catalog=AzureGBT;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
